# cobogo

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: release-plz.yml
examples/tui-app/: Cargo.toml
examples/tui-app/src/: main.rs  ui.rs
renderers/ratatui/: CHANGELOG.md  Cargo.toml
renderers/ratatui/src/: lib.rs
src/: arena.rs  context.rs  debug.rs  elements.rs  hash.rs  input.rs  input_handling.rs  layout.rs  layout_calc.rs  lib.rs  render.rs  render_commands.rs  text.rs  types.rs
tests/: basic.rs
