[workspace]
members = [".", "renderers/ratatui", "examples/tui-app"]
resolver = "3"

[package]
name = "cobogo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A UI layout library for Rust, ported from Clay"
license = "Zlib"
repository = "https://github.com/JoaoHenriqueBarbosa/cobogo"
homepage = "https://github.com/JoaoHenriqueBarbosa/cobogo"
readme = "README.md"
keywords = ["ui", "layout", "gui", "tui", "declarative"]
categories = ["gui", "rendering"]

[dependencies]
